--- a/rhino.cabal
+++ b/rhino.cabal
@@ -82,4 +82,5 @@ test-suite rhino-test
   default-language:     Haskell2010
   default-extensions:   NoImplicitPrelude
                         OverloadedStrings
+                        ScopedTypeVariables
   ghc-options:          -Wall -Wno-missing-signatures
